Adding a disable_save field to the chat send command and setting for the default chat agent tool index in the chat command specifications.

--- a/app/spec/commands/chat.yml
+++ b/app/spec/commands/chat.yml
@@ -50,6 +50,7 @@ _chat_directive: &chat_directive
     'chat:send@local':
       chat_channel: message
       chat_name: '@name'
+      disable_save: true
     # 'file:search@local':
     # 'file:fetch@local':
     'web:search@local':
@@ -73,6 +74,7 @@ command:
         chat_channel:
         chat_name:
         chat_text:
+        disable_save:
 
   agent:
     chat:
