--- a/docker/Dockerfile.cli
+++ b/docker/Dockerfile.cli
@@ -36,7 +36,7 @@ RUN apt-get update -y \
   && rm -rf /var/lib/apt/lists/*
 
 RUN curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /usr/share/keyrings/nodesource.gpg \
-  && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/nodesource.gpg] " \
+  && echo "deb [signed-by=/usr/share/keyrings/nodesource.gpg] " \
   "https://deb.nodesource.com/node_24.x nodistro main" > /etc/apt/sources.list.d/nodesource.list
 
 RUN apt-get update -y \
