--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -43,7 +43,7 @@ RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /
   https://download.docker.com/linux/ubuntu/ $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
 
 RUN curl -fsSL https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/google-archive-keyring.gpg \
-  && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/google-archive-keyring.gpg] " \
+  && echo "deb [signed-by=/usr/share/keyrings/google-archive-keyring.gpg] " \
   "http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list
 #
 # System dependencies
