--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -24,6 +24,7 @@ ENV PYTHONUNBUFFERED=1
 ENV REQUESTS_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
 
 ENV LIBGIT_VERSION=1.9.0
+ENV GECKO_VERSION=v0.36.0
 #
 # Shell environment
 #
@@ -42,9 +43,9 @@ RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /
   && echo "deb [signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] \
   https://download.docker.com/linux/ubuntu/ $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
 
-RUN curl -fsSL https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/google-archive-keyring.gpg \
-  && echo "deb [signed-by=/usr/share/keyrings/google-archive-keyring.gpg] " \
-  "http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list
+RUN curl -fsSL https://packages.mozilla.org/apt/repo-signing-key.gpg | gpg --dearmor -o /usr/share/keyrings/mozilla-archive-keyring.gpg \
+  && echo "deb [signed-by=/usr/share/keyrings/mozilla-archive-keyring.gpg] \
+  https://packages.mozilla.org/apt/ mozilla main" > /etc/apt/sources.list.d/mozilla.list
 #
 # System dependencies
 #
@@ -63,6 +64,13 @@ RUN wget --quiet https://github.com/libgit2/libgit2/archive/v${LIBGIT_VERSION}.t
   && rm -Rf libgit2-${LIBGIT_VERSION}/ \
   && rm -f v${LIBGIT_VERSION}.tar.gz \
   && ldconfig
+
+RUN git clone --depth 1 --branch "${GECKO_VERSION}" https://github.com/mozilla/geckodriver.git /tmp/geckodriver-src \
+  && cd /tmp/geckodriver-src \
+  && cargo build --release \
+  && cp target/release/geckodriver /usr/local/bin/ \
+  && strip /usr/local/bin/geckodriver || true \
+  && rm -rf /tmp/geckodriver-src
 #
 # User initialization
 #
