--- a/app/requirements.server.txt
+++ b/app/requirements.server.txt
@@ -45,6 +45,7 @@ numpy==2.2.6
 pandas==2.2.3
 validators==0.35.0
 python-magic==0.4.27
+html-to-markdown[lxml]==1.9.0
 
 # File parsing
 beautifulsoup4==4.13.4
