Adding an mcp_api data template variable to optionally include the mcp_enabled configuration on templated command specification base commands.

--- a/app/templates/data/model/command.yml
+++ b/app/templates/data/model/command.yml
@@ -50,6 +50,9 @@ command_base:
     <{ name }>:
         mixins: ["<{ name }>"]
         groups_allowed: <{ admin_roles }>
+#%- if mcp_api %#
+        mcp_enabled: true
+#%- endif %#
 
 #
 # Define data resource commands (list, get, save, remove, clear)
