--- a/env/secret.example
+++ b/env/secret.example
@@ -29,3 +29,12 @@ DEEPINFRA_API_KEY=
 
 ZIMAGI_GOOGLE_SEARCH_ID=
 ZIMAGI_GOOGLE_SEARCH_API_KEY=
+
+# Document Source
+
+ZIMAGI_GOOGLE_DRIVE_EMAIL=
+ZIMAGI_GOOGLE_DRIVE_PROJECT_ID=
+ZIMAGI_GOOGLE_DRIVE_PRIVATE_KEY_ID=
+ZIMAGI_GOOGLE_DRIVE_PRIVATE_KEY=
+ZIMAGI_GOOGLE_DRIVE_CLIENT_EMAIL=
+ZIMAGI_GOOGLE_DRIVE_CLIENT_ID=
