Updating the file parser plugin providers and file_parser specifications.

--- a/app/spec/plugins/file_parser.yml
+++ b/app/spec/plugins/file_parser.yml
@@ -9,8 +9,14 @@ plugin:
 
     providers:
       txt:
+      md:
       binary:
       docx:
         base: binary
+      pptx:
+        base: binary
+      xlsx:
+        base: binary
+      csv:
       pdf:
         base: binary
