--- a/app/spec/commands/agents.yml
+++ b/app/spec/commands/agents.yml
@@ -17,3 +17,7 @@ command:
     language_model:
       base: agent
       worker_type: language_model
+
+    file_parser:
+      base: agent
+      worker_type: file_parser
