--- a/app/spec/plugins/document_source.yml
+++ b/app/spec/plugins/document_source.yml
@@ -4,7 +4,7 @@ plugin:
     interface:
       download:
         params:
-          folders: list
+          folders: dict
           root_directory: str
 
     providers:
