Fixing a quoting issue in the secret.example.

--- a/env/secret.example
+++ b/env/secret.example
@@ -13,7 +13,7 @@ ZIMAGI_GITHUB_USER=
 ZIMAGI_GITHUB_TOKEN=
 ZIMAGI_GITHUB_ORG=
 
-ZIMAGI_DEFAULT_MODULES='[]'
+ZIMAGI_DEFAULT_MODULES=[]
 
 # Client
 
